--- a/templates/form.html
+++ b/templates/form.html
@@ -1,15 +1,14 @@
-<!doctype html>
-<html>
-<head>
-<title>Nueva entrada</title>
-</head>
-<body>
-    <form action="" method="POST">
-        <label for="title"> Título </label>
-        <input type="text" name="title">
-        <label for="description">Descripción</label>
-        <input type="text" name="description">
-        <input type="submit" value="Crear">
-    </form>
-</body>
-</html>
+
+{% extends "base.html" %} 
+
+{% block title %}Formulario de creación{% endblock title %}
+
+{% block content %}
+<form action="" method="POST">
+    <label for="title"> Título </label>
+    <input type="text" name="title">
+    <label for="description">Descripción</label>
+    <input type="text" name="description">
+    <input type="submit" value="Crear">
+</form>
+{% endblock content %}
