--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,32 @@
 {% endblock head %}
 </head>
 <body>
+{% block menu %}
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{url_for('show_entries')}}">Blog</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="{{url_for('show_entries')}}">Noticias</a></li>
+        <li><a href="{{url_for('new_post')}}">Nueva entrada</a></li>
+        <li><a href="#categories">Categorías</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
+<br>
+{% endblock menu %}
+
+
+
 {% block content %}
 
 {% endblock content %}
